--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     <title>SPA</title>
 </head>
 <body>
+    <img id="background1" src="includes/images/Untitledforme1.svg" alt="forme fond">
     <nav>
         <a href="#">Accueil</a>
         <a href="#">Prestations</a>
-        <a href="#">Contact</a>
+        <a href="#" id="contactBtn">Contact</a>
     </nav>
 
     <div id="presentation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ipsum dolores quis, eveniet magni ab soluta, beatae nisi quo aperiam facilis officia aut eius officiis, blanditiis ad iste dolor suscipit? Necessitatibus distinctio atque maiores quae aperiam, perspiciatis amet eligendi dolorem quisquam. Odio consequatur, exercitationem ad, iure maxime amet error fuga excepturi praesentium, earum sapiente unde perspiciatis? Dolorum, atque at aut quia veritatis natus fuga. Facere fugit doloribus veritatis totam, non, ipsum sunt error quas aliquid, ullam iusto quam ab? Adipisci enim magnam quae quod, ipsum perspiciatis aut eius totam quos dicta esse, consequatur minima illum aperiam fugit voluptate at aliquid.</div>
-
+    <div id="contactForm">
+        <form action="" method="post">
+            <span id="fermerFormBtn">FERMER</span>
+            <input type="email" id="emailForm" name="emailForm" placeholder="Votre Email" required>
+            <input type="text" id="sujetForm" name="sujetForm" placeholder="Sujet" required>
+            <br>
+            <input type="text" id="nomForm" name="nomForm" placeholder="Nom" required>
+            <input type="text" id="prenomForm" name="prenomForm" placeholder="Prénom" required>
+            <br>
+            <textarea name="textareaForm" id="textareaForm" cols="30" rows="15" placeholder="Votre message ..." required></textarea>
+            <input type="submit" value="Envoyer"> 
+        </form>
+    </div>
     <section id="informations">
         <div class="cadre" id="image">
         </div>
@@ -59,7 +72,10 @@
     </section>
 
     <footer>
-        <p>Copyright</p>
+        <p>Copyright | ©2022 |</p>
+        <a href="">CGU</a>
+        <a href="">CGV</a>
+        <a href="">Mentions Légales</a>
     </footer>
     <script src="includes/scripts/script.js"></script>
 </body>
